--- a/app/globals.css
+++ b/app/globals.css
@@ -2,7 +2,14 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
+body:root {
+  height: 100%;
+}
 
-html,body:root {
-    height: 100%;
+.leaftlet-bottom,
+.leaflet-control,
+.leaflet-pane,
+.leaflet.-top {
+  z-index: 0 !important;
 }
